--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "postinstall": "echo 'Skipping frozen lockfile check'"
   },
   "peerDependencies": {
     "typescript": "^5"
