--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
+
+
+
 {
   "name": "backend",
   "module": "index.js",
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.7"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "postinstall": "echo 'Skipping frozen lockfile check'"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.8.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.1",
-    "multer": "^2.0.2",
-    "serverless-http": "^4.0.0",
-    "socket.io": "^4.8.3",
-    "validator": "^13.15.23"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "serverless-http": "^3.2.0",
+    "url": "^0.11.4",
+    "validator": "^13.12.0"
   }
 }
